feat: Implement ZenAuth Admin application with user, client, and provider management modules
- Added main application entry point in main.js to orchestrate modules and initialize the app.
- Created userManager module for handling user-related operations (CRUD).
- Developed clientManager module for managing OAuth clients with CRUD operations.
- Implemented providerManager module for managing authentication providers.
- Introduced uiManager module for UI manipulation and modal management.
- Established a centralized state management system in store.js to handle application state.
- Developed utility functions for API requests and error handling in api.js.
- Implemented event listeners and state subscriptions to update UI based on state changes.
- Added functionality for managing blocked users and their unblocking.
- Enhanced UI with theme toggling and navigation between sections.

--- a/web/index.html
+++ b/web/index.html
@@ -274,7 +274,8 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Remplacer l'ancien script par notre nouvelle structure modulaire -->
+    <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
