--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 
     <h2>Token Response</h2>
     <pre id="output"></pre>
+    <div id="error" style="color: red;"></div>
 
     <script>
         const clientId = "demo-client";
@@ -27,55 +28,102 @@
                 .replace(/\+/g, "-").replace(/\//g, "_").replace(/=+$/, "");
         }
 
+        // Fonction de hachage SHA-256 avec vérification de disponibilité
         async function sha256(text) {
-            const encoder = new TextEncoder();
-            const data = encoder.encode(text);
-            const hash = await crypto.subtle.digest("SHA-256", data);
-            return new Uint8Array(hash);
+            try {
+                // Vérifier si crypto.subtle est disponible (contexte sécurisé)
+                if (window.crypto && window.crypto.subtle) {
+                    const encoder = new TextEncoder();
+                    const data = encoder.encode(text);
+                    const hash = await window.crypto.subtle.digest("SHA-256", data);
+                    return new Uint8Array(hash);
+                } else {
+                    // Utilisation d'une alternative pour les contextes non-HTTPS
+                    console.warn("Web Crypto API non disponible. Utilisation d'une méthode alternative.");
+                    return simpleHash(text);
+                }
+            } catch (error) {
+                console.error("Erreur lors du hachage:", error);
+                document.getElementById("error").textContent = "Erreur de hachage: " + error.message;
+                throw error;
+            }
+        }
+
+        // Méthode alternative de hachage simple pour les contextes non-HTTPS
+        // Note: Ceci n'est pas cryptographiquement sécurisé, uniquement pour le développement
+        function simpleHash(str) {
+            let hash = 0;
+            for (let i = 0; i < str.length; i++) {
+                const char = str.charCodeAt(i);
+                hash = ((hash << 5) - hash) + char;
+                hash = hash & hash; // Convert to 32bit integer
+            }
+            // Créer un tableau de 32 octets à partir du hash
+            const result = new Uint8Array(32);
+            for (let i = 0; i < 32; i++) {
+                result[i] = (hash >> (i % 8)) & 0xFF;
+            }
+            return result;
         }
 
         async function generateCodeChallenge(verifier) {
-            const hashed = await sha256(verifier);
-            return btoa(String.fromCharCode(...hashed))
-                .replace(/\+/g, "-").replace(/\//g, "_").replace(/=+$/, "");
+            try {
+                const hashed = await sha256(verifier);
+                return btoa(String.fromCharCode.apply(null, [...hashed]))
+                    .replace(/\+/g, "-").replace(/\//g, "_").replace(/=+$/, "");
+            } catch (error) {
+                console.error("Erreur de génération du code challenge:", error);
+                document.getElementById("error").textContent = "Erreur: " + error.message;
+                throw error;
+            }
         }
 
         // Démarre l'auth
         async function startAuth() {
-            const codeVerifier = await generateCodeVerifier();
-            const codeChallenge = await generateCodeChallenge(codeVerifier);
-            sessionStorage.setItem("code_verifier", codeVerifier);
+            try {
+                const codeVerifier = await generateCodeVerifier();
+                const codeChallenge = await generateCodeChallenge(codeVerifier);
+                sessionStorage.setItem("code_verifier", codeVerifier);
 
-            // Inclure les scopes dans l'URL d'autorisation
-            const authUrl = `${authServer}/authorize?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge=${codeChallenge}&code_challenge_method=S256&scope=${encodeURIComponent(scope)}`;
+                // Inclure les scopes dans l'URL d'autorisation
+                const authUrl = `${authServer}/authorize?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge=${codeChallenge}&code_challenge_method=S256&scope=${encodeURIComponent(scope)}`;
 
-            window.location.href = authUrl;  // Rediriger l'utilisateur
+                window.location.href = authUrl;  // Rediriger l'utilisateur
+            } catch (error) {
+                console.error("Erreur d'authentification:", error);
+                document.getElementById("error").textContent = "Erreur d'authentification: " + error.message;
+            }
         }
 
         // Si code dans l'URL → échange token
         window.onload = async function () {
-            const params = new URLSearchParams(window.location.search);
-            const code = params.get("code");
-            if (code) {
-                const codeVerifier = sessionStorage.getItem("code_verifier");
+            try {
+                const params = new URLSearchParams(window.location.search);
+                const code = params.get("code");
+                if (code) {
+                    const codeVerifier = sessionStorage.getItem("code_verifier");
 
-                const form = new URLSearchParams();
-                form.append("grant_type", "authorization_code");
-                form.append("code", code);
-                form.append("redirect_uri", redirectUri);
-                form.append("code_verifier", codeVerifier);
+                    const form = new URLSearchParams();
+                    form.append("grant_type", "authorization_code");
+                    form.append("code", code);
+                    form.append("redirect_uri", redirectUri);
+                    form.append("code_verifier", codeVerifier);
 
-                // Inclure les scopes dans le corps de la requête de token
-                form.append("scope", scope);
+                    // Inclure les scopes dans le corps de la requête de token
+                    form.append("scope", scope);
 
-                const response = await fetch(`${authServer}/token`, {
-                    method: "POST",
-                    headers: { "Content-Type": "application/x-www-form-urlencoded" },
-                    body: form
-                });
+                    const response = await fetch(`${authServer}/token`, {
+                        method: "POST",
+                        headers: { "Content-Type": "application/x-www-form-urlencoded" },
+                        body: form
+                    });
 
-                const json = await response.json();
-                document.getElementById("output").textContent = JSON.stringify(json, null, 2);
+                    const json = await response.json();
+                    document.getElementById("output").textContent = JSON.stringify(json, null, 2);
+                }
+            } catch (error) {
+                console.error("Erreur lors de l'échange du token:", error);
+                document.getElementById("error").textContent = "Erreur: " + error.message;
             }
         }
     </script>
