--- a/web/index.html
+++ b/web/index.html
@@ -128,7 +128,7 @@
                 </div>
             </section>
 
-            <!-- Ajoutez cette section après la section des providers -->
+            <!-- Add this section after the providers section -->
             <section id="blocked-users-section" class="section">
                 <div class="card">
                     <div class="card-header">
@@ -232,7 +232,7 @@
                     <select id="provider-type" name="provider-type" required>
                         <option value="google">Google</option>
                         <option value="microsoft">Microsoft</option>
-                        <option value="github">GitHub</option> <!-- Ajout du provider GitHub -->
+                        <option value="github">GitHub</option> <!-- Added GitHub provider -->
                     </select>
                 </div>
                 <div class="form-group">
@@ -274,7 +274,7 @@
         </div>
     </div>
 
-    <!-- Remplacer l'ancien script par notre nouvelle structure modulaire -->
+    <!-- Replace old script with our new modular structure -->
     <script type="module" src="js/main.js"></script>
 </body>
 
